# equation-visualizer

./: CMakeLists.txt
include/: KeyStates.hpp  colors.hpp  keyboard.hpp  matrix_transformations.hpp  shapes.hpp
src/: KeyStates.cpp  init.cpp  keyboard.cpp  main.cpp  matrix_transformations.cpp  render.cpp  shapes.cpp
